--- a/CSS/webb.css
+++ b/CSS/webb.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 60px;
     align-items: center;
-    background-color:blue;
+    background-color:rgb(58, 58, 189);
 }
 
 @media (min-width:1200px) {
